--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
 <link href="/choiceness/css/app.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="/choiceness/lib/lib.dll.js"></script><script type="text/javascript" src="/js/app.js"></script></body>
+<script type="text/javascript" src="/choiceness/lib/lib.dll.js"></script><script type="text/javascript" src="/choiceness/js/app.js"></script></body>
 </html>
